Bug sobre menu responsivo não aparecer devido ao z-index corrigido

--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,6 @@ i {
  .navbar {
    background: #284390;
    padding: 0 8%;
-   z-index: 1;
   }
   .navbar .container {
    display: flex;
